Migrate monitoring-blackbox-exporter to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -51,3 +51,4 @@
     - { role: tool-paperless,                   tags: kubernetes-app-tool-paperless,                   when: paperless_enabled | bool }
     - { role: tool-syncthing,                   tags: kubernetes-app-tool-syncthing,                   when: syncthing_enabled | bool }
     - { role: monitoring-apcups-exporter,       tags: kubernetes-app-monitoring-apcups-exporter,       when: apcups_exporter_enabled | bool }
+    - { role: monitoring-blackbox-exporter,     tags: kubernetes-app-monitoring-blackbox-exporter,     when: blackbox_exporter_enabled | bool }
