--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -52,3 +52,4 @@
     - { role: tool-syncthing,                   tags: kubernetes-app-tool-syncthing,                   when: syncthing_enabled | bool }
     - { role: monitoring-apcups-exporter,       tags: kubernetes-app-monitoring-apcups-exporter,       when: apcups_exporter_enabled | bool }
     - { role: monitoring-blackbox-exporter,     tags: kubernetes-app-monitoring-blackbox-exporter,     when: blackbox_exporter_enabled | bool }
+    - { role: monitoring-crowdsec-external,     tags: kubernetes-app-monitoring-crowdsec-external,     when: crowdsec_external_enabled | bool }
