--- a/apps/base/monitoring-kube-state-metrics/deploy/clusterRoleBinding.yaml
+++ b/apps/base/monitoring-kube-state-metrics/deploy/clusterRoleBinding.yaml
@@ -2,9 +2,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: kube-state-metrics
-  labels:
-    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
-    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -12,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: {{ kube_state_metrics.namespace }}
+  namespace: monitoring-kube-state-metrics
