--- a/apps/base/monitoring-kube-state-metrics/deploy/service.yaml
+++ b/apps/base/monitoring-kube-state-metrics/deploy/service.yaml
@@ -2,10 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kube-state-metrics
-  namespace: {{ kube_state_metrics.namespace }}
   labels:
-    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
-    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
     prometheus-target: kube-state-metrics
 spec:
   clusterIP: None
@@ -17,4 +14,5 @@ spec:
     port: 9443
     targetPort: https-self
   selector:
-    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/component: kube-state-metrics
