--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -56,3 +56,4 @@
     - { role: monitoring-grafana,               tags: kubernetes-app-monitoring-grafana,               when: grafana_enabled | bool }
     - { role: monitoring-keepalived-exporter,   tags: kubernetes-app-monitoring-keepalived-exporter,   when: keepalived_exporter_enabled | bool }
     - { role: monitoring-kube-state-metrics,    tags: kubernetes-app-monitoring-kube-state-metrics,    when: kube_state_metrics_enabled | bool }
+    - { role: monitoring-kubernetes,            tags: kubernetes-app-monitoring-kubernetes,            when: kubernetes_monitoring_enabled | bool }
