--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -58,3 +58,4 @@
     - { role: monitoring-kube-state-metrics,    tags: kubernetes-app-monitoring-kube-state-metrics,    when: kube_state_metrics_enabled | bool }
     - { role: monitoring-kubernetes,            tags: kubernetes-app-monitoring-kubernetes,            when: kubernetes_monitoring_enabled | bool }
     - { role: monitoring-nginx-exporter,        tags: kubernetes-app-monitoring-nginx-exporter,        when: nginx_exporter_enabled | bool }
+    - { role: monitoring-nginx-log-exporter,    tags: kubernetes-app-monitoring-nginx-log-exporter,    when: nginx_log_exporter_enabled | bool }
