Migrate monitoring-node-exporter to kustomize

--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -59,3 +59,4 @@
     - { role: monitoring-kubernetes,            tags: kubernetes-app-monitoring-kubernetes,            when: kubernetes_monitoring_enabled | bool }
     - { role: monitoring-nginx-exporter,        tags: kubernetes-app-monitoring-nginx-exporter,        when: nginx_exporter_enabled | bool }
     - { role: monitoring-nginx-log-exporter,    tags: kubernetes-app-monitoring-nginx-log-exporter,    when: nginx_log_exporter_enabled | bool }
+    - { role: monitoring-node-exporter,         tags: kubernetes-app-monitoring-node-exporter,         when: node_exporter_enabled | bool }
