--- a/apps/base/monitoring-node-exporter/deploy/clusterRoleBinding.yaml
+++ b/apps/base/monitoring-node-exporter/deploy/clusterRoleBinding.yaml
@@ -2,10 +2,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: node-exporter
-  namespace: {{ node_exporter.namespace }}
-  labels:
-    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
-    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -13,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: node-exporter
-  namespace: {{ node_exporter.namespace }}
+  namespace: monitoring-node-exporter
