--- a/apps/base/monitoring-node-exporter/deploy/networkPolicy.yaml
+++ b/apps/base/monitoring-node-exporter/deploy/networkPolicy.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-node-exporter
-  namespace: {{ node_exporter.namespace }}
-  labels:
-    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
-    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ node_exporter.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/name: node-exporter
+      app.kubernetes.io/component: node-exporter
 
 #  # node-exporter runs with `hostNetwork: true`, so NetworkPolicies don't apply
 #  ingress:
@@ -21,7 +18,9 @@ spec:
 #      from:
 #        - namespaceSelector:
 #            matchLabels:
-#              name: {{ prometheus.namespace }}
+#              kubernetes.io/metadata.name: monitoring-prometheus
 #          podSelector:
 #            matchLabels:
-#              {# prometheus.labels_def | to_nice_yaml() | indent(14) #}
+#              app.kubernetes.io/component: prometheus
+#              app.kubernetes.io/instance: k8s
+#              app.kubernetes.io/name: prometheus
