--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -62,3 +62,4 @@
     - { role: monitoring-node-exporter,          tags: kubernetes-app-monitoring-node-exporter,          when: node_exporter_enabled | bool }
     - { role: monitoring-node-exporter-external, tags: kubernetes-app-monitoring-node-exporter-external, when: node_exporter_external_enabled | bool }
     - { role: monitoring-prometheus-operator,    tags: kubernetes-app-monitoring-prometheus-operator,    when: prometheus_operator_enabled | bool }
+    - { role: monitoring-release-watcher,        tags: kubernetes-app-monitoring-release-watcher,        when: release_watcher_enabled | bool }
