Split release-watcher configuration in smaller files

--- a/apps/base/monitoring-release-watcher/deploy/secret/config.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/secret/config.yaml
@@ -16,7 +16,7 @@ common:
 
 sources:
   - type: file
-    path: watchers/watchers.yaml
+    path: watchers/*.yaml
 
 outputs:
   - type: prometheus_http
