--- a/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
@@ -16,7 +16,58 @@ generatorOptions:
 configMapGenerator:
 - name: release-watcher-watchers
   files:
-  - config/watchers.yaml
+  - config/watchers/common.yaml
+  - config/watchers/on-hosts.yaml
+  - config/watchers/app-auth-lemonldap.yaml
+  - config/watchers/app-auth-openldap.yaml
+  - config/watchers/app-auth-phpldapadmin.yaml
+  - config/watchers/app-auth-pyload.yaml
+  - config/watchers/app-cluster-calico.yaml
+  - config/watchers/app-cluster-ingress-nginx.yaml
+  - config/watchers/app-cluster-intel-gpu-plugin.yaml
+  - config/watchers/app-cluster-longhorn.yaml
+  - config/watchers/app-cluster-metallb.yaml
+  - config/watchers/app-cluster-multus.yaml
+  - config/watchers/app-cluster-reloader.yaml
+  - config/watchers/app-dev-gitea.yaml
+  - config/watchers/app-download-deluge.yaml
+  - config/watchers/app-download-sabnzbd.yaml
+  - config/watchers/app-download-sickchill.yaml
+  - config/watchers/app-home-esphome.yaml
+  - config/watchers/app-home-frigate.yaml
+  - config/watchers/app-home-home-assistant.yaml
+  - config/watchers/app-home-home-mosquitto.yaml
+  - config/watchers/app-home-node-red.yaml
+  - config/watchers/app-home-room-assistant.yaml
+  - config/watchers/app-home-zigbee2mqtt.yaml
+  - config/watchers/app-home-zwave-js-ui.yaml
+  - config/watchers/app-infra-blocky.yaml
+  - config/watchers/app-infra-docker-registry-ui.yaml
+  - config/watchers/app-infra-docker-registry.yaml
+  - config/watchers/app-infra-gandi-livedns.yaml
+  - config/watchers/app-infra-infra-kubernetes-metrics-server.yaml
+  - config/watchers/app-infra-kubernetes-dashboard.yaml
+  - config/watchers/app-infra-mailhog.yaml
+  - config/watchers/app-infra-ntfy.yaml
+  - config/watchers/app-infra-unifi.yaml
+  - config/watchers/app-infra-zonemta.yaml
+  - config/watchers/app-logging-elasticsearch.yaml
+  - config/watchers/app-logging-fluentbit.yaml
+  - config/watchers/app-logging-fluentd.yaml
+  - config/watchers/app-logging-kibana.yaml
+  - config/watchers/app-monitoring-apcups-exporter.yaml
+  - config/watchers/app-monitoring-kube-prometheus.yaml
+  - config/watchers/app-monitoring-nginx-exporter.yaml
+  - config/watchers/app-monitoring-nginx-log-exporter.yaml
+  - config/watchers/app-monitoring-release-watcher.yaml
+  - config/watchers/app-stream-airsonic.yaml
+  - config/watchers/app-stream-jellyfin.yaml
+  - config/watchers/app-tool-homepage.yaml
+  - config/watchers/app-tool-miniflux.yaml
+  - config/watchers/app-tool-nextcloud.yaml
+  - config/watchers/app-tool-olivetin.yaml
+  - config/watchers/app-tool-paperless.yaml
+  - config/watchers/app-tool-syncthing.yaml
 
 secretGenerator:
 - name: release-watcher
