--- a/apps/vagrant/monitoring-release-watcher/deploy/secret/config.yaml
+++ b/apps/vagrant/monitoring-release-watcher/deploy/secret/config.yaml
@@ -13,7 +13,7 @@ common:
         #password: "changeme"
 sources:
     - type: file
-      path: watchers/watchers.yaml
+      path: watchers/*.yaml
 outputs:
     - type: prometheus_http
       port: 8080
@@ -32,14 +32,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3bnFDNlJDWFVKL0tMWFpN
-            bjdmMWpDejZQN1hqcnVmeTA3eGFEam9uazBVCnNoeVBXRlBnSDZoVGRac2dDSUJC
-            L0k4VzVidFFHVHp6Nmhzd0kyZjA0cVkKLS0tIDlXaVFLNDA1b1NhMGZaNFIrbTlC
-            c04vT016RU5tbnd5bXA4LzBvbk0xdVkKmuscGTWwZpiJFmTqelj9/62GuZlwjFdj
-            Fk3eeSviqBHK6QxMDHVGo9LhMv7mcSV9wDU+lJ8F6vMDTp0fRgwqEw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhYXAwb2ZaY1FoWDgzVGJL
+            RUJZTS9VR01RSFVwc01ZV0cxcVRpdDB3TW5BClg2ZDZpZ1pMVlVpUU5OWHllQ0Z3
+            ZlpncmR1bTZEdTNMMFpTQ2tTM1BSZWMKLS0tIE1qNFcwYUdBb1NPRWFvRVJnVG9m
+            d3MySUtMOHJYZU1GRGF5TWZEUjhLOWMKYROeereF839TNOODqmj6P6Iu/0lJfuzc
+            JnJeGM5gloD7gyxGYAOosilKpZ538rXeuMUwHkwb5Bul3xzUKJXmrw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-21T12:30:03Z"
-    mac: ENC[AES256_GCM,data:tmlH3UrK7SpIM37Zu9AcEjmqDQl7CxDjcoRhzUrWGISxA5Rmph1yRLWs/0UmqJeTZ6yMHzUVgZdR2ueh7cfM/JEq+Qag1ukj3Ve8RyXASwM4HEGJS0dM85o5o0GiBOsbEdKSjxzzKc62IQ1xQy1ZCR8TMWFHd+wNgCcux3oXeZ0=,iv:6EMITt5ZBAQBD0MmuNFiIkM21Jukb1JWT5yyrFPWtEY=,tag:brfBbwgI9o8RFNnSNEoujw==,type:str]
+    lastmodified: "2023-07-21T13:16:52Z"
+    mac: ENC[AES256_GCM,data:oFpXiTpbr9zmf7WRPZIa6UVhqQdonst1vaKOQ/7mVdLCcRCGQ6y/Fp0PChljh7o8xc+mWJwyb/Dsrwq98TS3CM08UABZHmO3jcmGJEhFfc6USpKs/CQmHpHiX6ayHAbbd5SbnwhsrfgJWBdnAU93+/k+o4znapi7+EA4Aot0WDQ=,iv:mFxHz8NYrdKSqIBcVg7qhv6uFIiQZg31YzM7t3wxeH0=,tag:/6KZBXrmaOjG4Lya2rLh7Q==,type:str]
     pgp: []
     encrypted_regex: ^(username|password)$
     version: 3.7.3
