--- a/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
+++ b/ansible/inventories/vagrant/group_vars/all/openssl-pki.yml
@@ -164,10 +164,10 @@ openssl_custom_pki:
     ca_common_name: "cluster.local" # TODO use .lan TLD
     certs:
       - name: "docker-registry"
-        common_name: "{{ docker_registry_servername }}"
+        common_name: "docker-registry.infra-docker-registry.svc.cluster.local"
         san:
           - "{{ docker_private_registry_domain }}"
-          - "{{ docker_registry_servername }}"
+          - "docker-registry.infra-docker-registry.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -210,7 +210,7 @@ openssl_custom_pki:
         generate_dh_param_enabled: true
         generate_dh_param_size: 1024
       - name: "smtp"
-        common_name: "{{ zonemta_smtp_servername }}"
+        common_name: "zonemta.infra-zonemta.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -218,7 +218,7 @@ openssl_custom_pki:
         organizational_unit_name: Test
         email_address: user@mail.net
       - name: "fluentd"
-        common_name: "{{ fluentd_servername }}"
+        common_name: "fluentd.logging-fluentd.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -226,7 +226,7 @@ openssl_custom_pki:
         organizational_unit_name: Test
         email_address: user@mail.net
       - name: "fluentbit"
-        common_name: "{{ fluentbit_servername }}"
+        common_name: "fluentbit.logging-fluentbit.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -234,7 +234,7 @@ openssl_custom_pki:
         organizational_unit_name: Test
         email_address: user@mail.net
       - name: "elasticsearch"
-        common_name: "{{ elasticsearch_servername }}"
+        common_name: "elasticsearch.logging-elasticsearch.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
@@ -242,7 +242,7 @@ openssl_custom_pki:
         organizational_unit_name: Test
         email_address: user@mail.net
       - name: "mqtt"
-        common_name: "{{ mosquitto_default_listener_servername }}"
+        common_name: "mosquitto.home-mosquitto.svc.cluster.local"
         country_name: FR
         state_or_province_name: France
         locality_name: Paris
