--- a/ansible/install_applications/roles/cluster-ingress-nginx/meta/main.yml
+++ b/ansible/install_applications/roles/cluster-ingress-nginx/meta/main.yml
@@ -2,12 +2,13 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Configure Kubernetes Nginx Ingress"
+  description: "Deploy application cluster-ingress-nginx"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
       versions:
         - stretch
         - buster
-#dependencies:
-#  - { role: kubernetes-preinstall }
+
+dependencies:
+  - { role: app_base }
