--- a/apps/base/cluster-ingress-nginx/deploy/ingress-nginx-tcp-services-configMap.yaml
+++ b/apps/base/cluster-ingress-nginx/deploy/ingress-nginx-tcp-services-configMap.yaml
@@ -1,8 +1,10 @@
-kind: ConfigMap
 apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: ingress-nginx-udp-services
+  name: ingress-nginx-tcp-services
   namespace: ingress-nginx
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
+data:
+  "1883": home-mosquitto/mosquitto:1883
