--- a/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
+++ b/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
@@ -15,7 +15,7 @@ spec:
   tls:
     - hosts:
       - lemonldap.auth.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: lemonldap.auth.intra.web_domain_name
     http:
