--- a/apps/base/tool-homepage/deploy/ingress.yaml
+++ b/apps/base/tool-homepage/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - homepage.tool.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: homepage.tool.web_domain_name
     http:
