--- a/apps/base/auth-phpldapadmin/deploy/ingress.yaml
+++ b/apps/base/auth-phpldapadmin/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - phpldapadmin.auth.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: phpldapadmin.auth.intra.web_domain_name
     http:
