--- a/apps/base/dev-argo-cd/deploy/base/server/argocd-server-ingress-http.yaml
+++ b/apps/base/dev-argo-cd/deploy/base/server/argocd-server-ingress-http.yaml
@@ -17,7 +17,7 @@ spec:
   tls:
     - hosts:
       - argo-cd.dev.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: argo-cd.dev.intra.web_domain_name
     http:
