--- a/apps/base/dev-gitea/deploy/gitea/gitea-ingress.yaml
+++ b/apps/base/dev-gitea/deploy/gitea/gitea-ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - gitea.dev.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: gitea.dev.intra.web_domain_name
     http:
