--- a/apps/base/download-deluge/deploy/web/web-ingress.yaml
+++ b/apps/base/download-deluge/deploy/web/web-ingress.yaml
@@ -19,7 +19,7 @@ spec:
   tls:
     - hosts:
       - deluge.dl.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: deluge.dl.intra.web_domain_name
     http:
