--- a/apps/base/download-pyload/deploy/ingress.yaml
+++ b/apps/base/download-pyload/deploy/ingress.yaml
@@ -20,7 +20,7 @@ spec:
   tls:
     - hosts:
       - pyload.dl.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: pyload.dl.intra.web_domain_name
     http:
