--- a/apps/base/download-sabnzbd/deploy/ingress.yaml
+++ b/apps/base/download-sabnzbd/deploy/ingress.yaml
@@ -19,7 +19,7 @@ spec:
   tls:
     - hosts:
       - sabnzbd.dl.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: sabnzbd.dl.intra.web_domain_name
     http:
