--- a/apps/base/infra-docker-registry-ui/deploy/ingress.yaml
+++ b/apps/base/infra-docker-registry-ui/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - docker-registry-ui.infra.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: docker-registry-ui.infra.intra.web_domain_name
     http:
