--- a/apps/base/infra-mailhog/deploy/ingress.yaml
+++ b/apps/base/infra-mailhog/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - mailhog.infra.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: mailhog.infra.intra.web_domain_name
     http:
