--- a/apps/base/logging-kibana/deploy/ingress.yaml
+++ b/apps/base/logging-kibana/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - kibana.log.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host:  kibana.log.intra.web_domain_name
     http:
