--- a/apps/base/stream-airsonic/deploy/ingress.yaml
+++ b/apps/base/stream-airsonic/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - airsonic.stream.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: airsonic.stream.intra.web_domain_name
     http:
