--- a/apps/base/tool-olivetin/deploy/ingress.yaml
+++ b/apps/base/tool-olivetin/deploy/ingress.yaml
@@ -14,7 +14,7 @@ spec:
   tls:
     - hosts:
       - olivetin.tool.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: olivetin.tool.intra.web_domain_name
     http:
