--- a/apps/base/tool-paperless/deploy/paperless/ingress.yaml
+++ b/apps/base/tool-paperless/deploy/paperless/ingress.yaml
@@ -20,7 +20,7 @@ spec:
   tls:
     - hosts:
       - paperless.tool.intra.web_domain_name
-      secretName: ingress-tls
+      secretName: opensslpki-ingress-tls
   rules:
   - host: paperless.tool.intra.web_domain_name
     http:
