--- a/ansible/install_applications/roles/cluster-metallb/meta/main.yml
+++ b/ansible/install_applications/roles/cluster-metallb/meta/main.yml
@@ -2,10 +2,13 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Configure Kubernetes MetalLB"
+  description: "Deploy application cluster-metallb"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
       versions:
         - stretch
         - buster
+
+dependencies:
+  - { role: app_base }
